--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
 
     <div class="row" style="margin-top: 2em;">
+      <h3>Open Space and Parks</h3>
       <p style="text-align:center">Creating family-friendly parks and open spaces for people to enjoy and recreate.</p>
       <div class="large-12 columns">
         <div class="twentytwenty-container">
