--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   <link href="css/foundation.css" rel="stylesheet" type="text/css" />
   <link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
 </head>
-  <body>
-
-    <div class="row" style="margin-top: 2em;">
-      <h3 style="margin-left:5px;">Open Space and Parks</h3>
-      <p style="text-align:center">Creating family-friendly parks and open spaces for people to enjoy and recreate.</p>
+  <body style="background-color: #2b2b2b">
+    <div class="row" style="margin-top: 0.5em;">
+      <h3 style="margin-left:10px; color:white;">Open Space and Parks</h3>
+      <p style="margin-left:10px; color:white;">Creating family-friendly parks and open spaces for people to enjoy and recreate.</p>
       <div class="large-12 columns">
         <div class="twentytwenty-container">
           <img width="100%" src="img/familyfriendpark_exst_clip2.jpg" />
