--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <img width="100%" src="img/04_Family friendly parks_IMAGE CREDIT_ Designed by SITELAB urban studio_CMG.jpg" />
         </div>
       </div>
+      <input class="VRbutton"  type="button" value="Explore the VR Scene" onclick="window.open('https://3dstreet.app/#/scenes/943f35e8-8064-4fb8-9588-80fe44cb76e2.json')" />
       <!-- <div class="large-6 columns" style="position: relative; width: 50%;"> 
         <p style="font-family: Arial; font-weight:100;">Typical scene of existing undeveloped land.</p>
       </div>
